add updated flow diagram